<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048Game</string>
    <string name="hello_world">2048 游 戏</string>
    <string name="action_settings">Settings</string>
    <string name="textView_score">分数:</string>
    <string name="textView_bestScore">最高分:</string>
    <string name="button_back">后退</string>
    <string name="button_forward">前进</string>
    <string name="button_restart">重新开始</string>
    <string name="textView_author">DESIGN BY Light Lawliet</string>
    <string name="textView_initScore">0</string>
    <string name="button_begin">开始新局</string>
    <string name="button_continue">继续上局</string>
    <string name="button_history">查看最高分</string>
    <string name="button_weekHistory">查看本周最高</string>
    <string name="button_playMusic">播放背景音乐</string>
    <string name="textView_history">历史最高分排名</string>
    <string name="textView_weekHistory">本周最高分排名</string>
    <string name="textView_gameTitle">2048Game</string>
    <string name="button_settings">设置</string>
    <string name="button_explain">游戏说明</string>
    <string name="textView_flower">鲜花数：</string>

</resources>