<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud"
    android:orientation="vertical"
    tools:context="com.wit.game2048V5.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2" >

        <TextView
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/textView_gameTitle"
            android:textColor="#FF6666"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_begin"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_begin"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_continue"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_continue"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_history"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_history"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_weekHistory"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_weekHistory"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_playMusic"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_playMusic"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_settings"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_settings"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_explain"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/button_explain"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>